test-data/cluster1-ingressList.yml
apiVersion: v1
kind: List
metadata: {}
resourceVersion: ""
selfLink: ""
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-cluster1-ingress1
    namespace: namespace1
  spec:
    rules:
    - host: http-ingress1.cluster1.k8s.io
      http:
        paths:
        - backend:
            serviceName: service1
            servicePort: 80
          path: /
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-cross-cluster-ingress
    namespace: namespace2
  spec:
    rules:
      - host: http-cross-cluster-ingress.k8s.io
        http:
          paths:
            - backend:
                serviceName: service2
                servicePort: 80
              path: /
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-multi-path-ingress
    namespace: namespace3
  spec:
    rules:
      - host: http-multi-path-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service3a
                servicePort: 80
              path: /a
            - backend:
                serviceName: service3b
                servicePort: 80
                path: /b
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-multi-host-ingress
    namespace: namespace4
  spec:
    rules:
      - host: http-multi-host-ingress1.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service4a
                servicePort: 80
              path: /
      - host: http-multi-host-ingress2.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service4b
                servicePort: 80
              path: /
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-same-host-ingress1
    namespace: namespace5
  spec:
    rules:
      - host: http-same-host-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service5a
                servicePort: 80
              path: /ingress1
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-same-host-ingress2
    namespace: namespace5
  spec:
    rules:
      - host: http-same-host-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service5b
                servicePort: 80
              path: /ingress2
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-same-host-ingress3
    namespace: namespace5
  spec:
    rules:
      - host: http-same-host-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service5c
                servicePort: 80
              path: /v1/pair
      - host: http-same-host-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service5c
                servicePort: 80
              path: /v1/paired_summary
      - host: http-same-host-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service5e
                servicePort: 80
              path: /v1/excluded_summary
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: http-clusterip-service-ingress
    namespace: namespace6
  spec:
    rules:
      - host: http-clusterip-service-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service6
                servicePort: 80
              path: /
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: https-invalid-tls-ingress
    namespace: namespace7
  spec:
    rules:
      - host: https-invalid-tls-ingress.cluster1.k8s.io
        http:
          paths:
            - backend:
                serviceName: service7
                servicePort: 80
              path: /
    tls:
      - hosts:
          - https-invalid-tls-ingress.cluster1.k8s.io
        secretName: invalidTLS
