test-data/cluster1-secretList.yml
apiVersion: v1
kind: List
metadata: {}
resourceVersion: ""
selfLink: ""
items:
- apiVersion: v1
  data:
    tls.crt: aW52YWxpZENSVAo=
    tls.key: aW52YWxpZEtFWQo=
  kind: Secret
  metadata:
    name: invalidTLS
    namespace: namespace7
  type: Opaque
- apiVersion: v1
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzakNDQXBvQ0NRRHBXaFpENSs4bGp6QU5CZ2txaGtpRzl3MEJBUXNGQURDQm1qRUxNQWtHQTFVRUJoTUMKVlZNeEN6QUpCZ05WQkFnTUFrMU9NUlF3RWdZRFZRUUhEQXROYVc1dVpXRndiMnhwY3pFUE1BMEdBMVVFQ2d3RwpWR0Z5WjJWME1Rd3dDZ1lEVlFRTERBTkxPRk14R2pBWUJnTlZCQU1NRVNvdVkyeDFjM1JsY2pFdWF6aHpMbWx2Ck1TMHdLd1lKS29aSWh2Y05BUWtCRmg1ellYSmhkbUZ1WVM1d1pYSnBlV0Z6WVcxNVFIUmhjbWRsZEM1amIyMHcKSGhjTk1Ua3dNekkxTWpFME5USXlXaGNOTWprd016SXlNakUwTlRJeVdqQ0JtakVMTUFrR0ExVUVCaE1DVlZNeApDekFKQmdOVkJBZ01 [...]
    tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRE5yK1VXTDBhTnVpclYKL2FacUFUTlJqWW1Zd2htSGFZSXlqdzN1aUlURFNFODNVMXhqWDF0ZW8xSFE5UWlzZ25hTTZBc0JaanBGalJOZwpCRkIreURqY2FYWWtRVHFobnR2ZlRsSVFZaUx2R1FJSUNjMXQyU3V2emh6czJYdWlkdWY1eTd3elJqVlFYYVVHCitNV2lubTBycnhSUWR5eEZuUGxNOWd2dUVYV29rcGVxdFU1bUczZ0oxMFQwR1ZFL3VJSGsrL1N2VzFyRzRRenMKVDVGNUEwR0Nic3RrSE9vV3kxcEJxVHk1L1FtamtiWjVuZ0lIVkg5RG1ScysyeTdqdjdUVEczTG94aENLdzdLRgpLd2toSXFXQnlVYWp [...]
  kind: Secret
  metadata:
    name: validTLS
    namespace: namespace8
  type: Opaque
- apiVersion: v1
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvRENDQW9nQ0NRRHVNZDBQNWtqZU1EQU5CZ2txaGtpRzl3MEJBUXNGQURDQmtURUxNQWtHQTFVRUJoTUMKVlZNeEN6QUpCZ05WQkFnTUFrMU9NUlF3RWdZRFZRUUhEQXROYVc1dVpXRndiMnhwY3pFUE1BMEdBMVVFQ2d3RwpWR0Z5WjJWME1Rd3dDZ1lEVlFRTERBTkxPRk14RVRBUEJnTlZCQU1NQ0NvdWF6aHpMbWx2TVMwd0t3WUpLb1pJCmh2Y05BUWtCRmg1ellYSmhkbUZ1WVM1d1pYSnBlV0Z6WVcxNVFIUmhjbWRsZEM1amIyMHdIaGNOTVRrd016STEKTWpFME1qTXdXaGNOTWprd016SXlNakUwTWpNd1dqQ0JrVEVMTUFrR0ExVUVCaE1DVlZNeEN6QUpCZ05WQkFnTQpBazFPTVJRd0VnWUR [...]
    tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQzV6LzQ5VVVnYU5hbmwKaGJyZTlZTUR1T3VmT3RyZ3FxZkpDTXErekg4RXpRRGdsay9Md2o2ZTN3WHgrclF5aGJ2YlFWM0NlZG90cDRTZgpvRS9IMXN3RW5PbGt1MTFEdEpSdWVPKy9RR3hISzdyZDc2aWM2YmNSb3A2N0ZaVzVOR0FlYzN1ZVNRMXFQd0txCkl1blJoWE1FVmRzdDZOMGNWWUIvaDd3VjdTZEc5NDdpZ1AyQ2ZYdVlLT2plN0dNa2JxR1pOVVl2UWRHMDJIeGgKVlFBWkIvKzRrMkpwZm9QRm9KSTM0aXNuSDlEQ2xiYTVpZ1pKMnlPSnFwOG9Lb0VrR0xWQzhtOEdhZ3JaamtqbApnRjlHM0JNaHZkY1R [...]
  kind: Secret
  metadata:
    name: haproxy-ingress-np-tls-secret
    namespace: kube-system
  type: Opaque
